--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "@testing-library/user-event": "13.5.0",
     "axios": "0.26.1",
     "bootstrap": "5.1.3",
+    "history": "4.10.1",
     "node-sass": "7.0.1",
     "react": "^18.0.0",
     "react-bootstrap": "2.2.3",
     "react-dom": "^18.0.0",
+    "react-redux": "7.2.8",
     "react-router-dom": "5.2.0",
     "react-scripts": "5.0.1",
+    "react-transition-group": "4.4.2",
+    "redux": "4.1.2",
     "styled-components": "5.3.5",
     "web-vitals": "2.1.4"
   },
